tests/lean/bad_error5.lean.expected.out
bad_error5.lean:13:10: error: code generation failed, VM does not have code for 'sorry'
